# bsm-cpp

./: CMakeLists.txt  README.md  bsm.cpp  bsm.h  main.cpp
benchmark_results/: bisection.txt  safe_newton.txt  safe_newton_with_convergence_speed_checks.txt
tests/: performance.cpp  unit.cpp
